docs: swagger for beca endpoint
